<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <TextView
        android:id="@+id/radiusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/radius"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/radiusValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="0"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/radiusUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/meters"
        android:textSize="18sp" />

    <SeekBar
        android:id="@+id/seekRadius"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radiusValue"
        android:layout_margin="10dp"
        android:progress="0"
        android:max="10000"
        android:secondaryProgress="0" />

    <ListView
        android:id="@+id/listPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/okButton"
        android:layout_below="@id/seekRadius"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" >
    </ListView>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ok" />

</RelativeLayout>